--- a/product/src/app/contact/contact.component.html
+++ b/product/src/app/contact/contact.component.html
@@ -31,7 +31,7 @@
 
           <div class="info-card">
             <div class="info-icon">
-              <img src="assets/email-icon.png" alt="Email" />
+              <img src="assets/icons/email.jpg" alt="Email" />
             </div>
             <h3>Email</h3>
             <p>{{ contactInfo.email }}</p>
@@ -39,7 +39,7 @@
 
           <div class="info-card">
             <div class="info-icon">
-              <img src="assets/clock-icon.png" alt="Hours" />
+              <img src="assets/icons/time.jpg" alt="Hours" />
             </div>
             <h3>Business Hours</h3>
             <p>{{ contactInfo.hours }}</p>
@@ -62,7 +62,7 @@
 
           <div class="form-group">
             <label for="phone">Phone</label>
-            <input type="tel" id="phone" placeholder="+63 917 123 4567">
+            <input type="tel" id="phone" placeholder="09171234567">
           </div>
 
           <div class="form-group">
@@ -72,18 +72,6 @@
 
           <button type="submit" class="btn btn-submit">Send Message</button>
         </form>
-      </div>
-    </div>
-  </div>
-</section>
-
-<section class="map-section">
-  <div class="container">
-    <h2>Find Us</h2>
-    <div class="map-placeholder">
-      <img src="assets/map-placeholder.jpg" alt="Map Location">
-      <div class="map-overlay">
-        <p class="map-address">{{ contactInfo.address }}</p>
       </div>
     </div>
   </div>
